Fixed strange scrolling effect on iPhone

--- a/css/onepage-scroll.css
+++ b/css/onepage-scroll.css
@@ -1,7 +1,7 @@
 body,
 html {
     margin: 0;
-    overflow: hidden;
+    /*    overflow: hidden;*/
     -webkit-transition: opacity 400ms;
     -moz-transition: opacity 400ms;
     transition: opacity 400ms;
